--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,7 @@
         android:id="@+id/editTextStevilka"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_margin="16sp"
+        android:layout_margin="16dp"
         android:hint="Vnesi številko"
         android:inputType="phone"
         android:textSize="25sp"
@@ -50,7 +50,7 @@
         android:id="@+id/editTextSMS"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_margin="16sp"
+        android:layout_margin="16dp"
         android:hint="Vnesi besedilo"
         android:inputType="textMultiLine"
         android:textSize="25sp"
